@@ -1,3 +1,7 @@
+Changes between version 8 and version 9:
+
++ error dialog
+
 Changes between version 7 and version 8:
 
 + graphing
